Задание 2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-master
  name: jenkins
  namespace: devops-tools
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: jnlp
      port: 50000
      protocol: TCP
      targetPort: 50000
  selector:
    app: jenkins-master # Указываем лейбл по которому выбираются поды
  type: ClusterIP
